# shortener

./: Cargo.toml  README.md  benchmark.sh
src/: main.rs
