[package]
name = "shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1.49", features = ["rt", "net", "io-util"] }
hyper = { version = "1.8", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
postcard = "1.1"
